@@ -112,7 +112,7 @@
 "Playstation",27,78,6,"Sony Playstation"
 "Playstation 3",45561,113,81,"Sony Playstation 3"
 "Playstation 4",,120,,
-"Playstation Portable",,1024,109,"Sony PSP"
+"Playstation Portable",,109,109,"Sony PSP"
 "Plug and Play",31822,,,
 "Pokemon Mini",41008,,,
 "RCA Studio II",17670,5,,
